do html structure and start stylesheets

--- a/index.html
+++ b/index.html
@@ -11,53 +11,51 @@
 
 <body>
     <div class="container">
+
         <div class="left-part">
-            <div class="logo"></div>
+            <div class="logo-wrapper">
+                <img alt="logo-odin" src="img/odin-lined.png" class="logo-img"></img>
+                <span class="logo-text">ODIN</span>
+            </div>
         </div>
+
         <div class="right-part">
-            <section class="title">
-                <p class="descripton top"></p>
-                <p class="description"></p>
+            <section class="description">
+                <p class="description__top">This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <i>now</i> to get started.</p>
+                <p class="description__bottom">You <i>know</i> you want to.</p>
             </section>
             <section class="form">
                 <form action="#" method="post" class="registration-form">
-                    <legend>Let's do this!</legend>
-                    <ul>
-                        <li class="form-input-item1"><label for="">Firt</label><input name="" type="text"></li>
-                        <li class="form-input-item2"><label for="">Last Name</label><input type="text"></li>
-                        <li class="form-input-item3"><label for="">Email</label><input type="text"></li>
-                        <li class="form-input-item4"><label for=""></label><input type="text"></li>
-                        <li class="form-input-item5"><label for=""></label><input type="text"></li>
-                        <li class="form-input-item6"><label for=""></label><input type="text"></li>
-
-                        <ul class="form__list">
-                            <li class="form__item1">
-                                <label for="FIRST Name" class="form__label">FIRST Name</label>
-                                <input type="text" class="form__input" id="FIRST Name," name="FIRST Name,">
-                            </li>
-                            <li class="form__item2">
-                                <label for="LAST NAME" class="form__label">LAST NAME</label>
-                                <input type="text" class="form__input" id="LAST NAME," name="LAST NAME,">
-                            </li>
-                            <li class="form__item3">
-                                <label for="EMAIL" class="form__label">EMAIL</label>
-                                <input type="text" class="form__input" id="EMAIL," name="EMAIL,">
-                            </li>
-                            <li class="form__item4">
-                                <label for="PHONE NUMBER" class="form__label">PHONE NUMBER</label>
-                                <input type="text" class="form__input" id="PHONE NUMBER," name="PHONE NUMBER,">
-                            </li>
-                            <li class="form__item5">
-                                <label for="PASSWORD" class="form__label">PASSWORD</label>
-                                <input type="text" class="form__input" id="PASSWORD," name="PASSWORD,">
-                            </li>
-                            <li class="form__item6">
-                                <label for="CONFIRM PASSWORD" class="form__label">CONFIRM PASSWORD</label>
-                                <input type="text" class="form__input" id="CONFIRM PASSWORD," name="CONFIRM PASSWORD,">
-                            </li>
-                        </ul>
+                    <legend class="form__title">Let's do this!</legend>
+                    <ul class="form__list">
+                        <li class="form__item1">
+                            <label for="FIRST Name" class="form__label">FIRST Name</label>
+                            <input type="s" class="form__input" id="FIRST Name," name="FIRST Name,">
+                        </li>
+                        <li class="form__item2">
+                            <label for="LAST NAME" class="form__label">LAST NAME</label>
+                            <input type="text" class="form__input" id="LAST NAME," name="LAST NAME,">
+                        </li>
+                        <li class="form__item3">
+                            <label for="EMAIL" class="form__label">EMAIL</label>
+                            <input type="text" class="form__input" id="EMAIL," name="EMAIL,">
+                        </li>
+                        <li class="form__item4">
+                            <label for="PHONE NUMBER" class="form__label">PHONE NUMBER</label>
+                            <input type="text" class="form__input" id="PHONE NUMBER," name="PHONE NUMBER,">
+                        </li>
+                        <li class="form__item5">
+                            <label for="PASSWORD" class="form__label">PASSWORD</label>
+                            <input type="text" class="form__input" id="PASSWORD," name="PASSWORD,">
+                        </li>
+                        <li class="form__item6">
+                            <label for="CONFIRM PASSWORD" class="form__label">CONFIRM PASSWORD</label>
+                            <input type="text" class="form__input" id="CONFIRM PASSWORD," name="CONFIRM PASSWORD,">
+                        </li>
                     </ul>
+                    <button type="submit" class="form__btn btn">Create account</button>
                 </form>
+                <p class="question">Already have an account?<a href="" class="log-in">Log in</a></p>
             </section>
         </div>
     </div>
